fix resource paths

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,16 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
+sourceSets.main {
+    java {
+        srcDir 'src/main/java'
+    }
+    resources {
+        srcDirs = ['src/main/java', 'src/main/resources']
+        exclude "**/*.java"
+    }
+}
+
 repositories {
     mavenCentral()
     jcenter()
